# X11Server

./: .gitignore  .gitmodules  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/x11server/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: THIRD_PARTY_NOTICES.txt
app/src/main/cpp/: CMakeLists.txt  egl_renderer.c  egl_renderer.h  input.c  input.h  native-lib.cpp  x11_server.c  x11_server.h
app/src/main/java/com/example/x11server/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/x11server/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/termux-build/: README.md  build_termux_packages.ps1  build_termux_packages.sh  package-list.txt
